--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Kohoot</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
+  <center><h1>Kohoot</h1></center>
   <script src="script.js"></script>
 </body>
 
