--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
   <center><h1>Kohoot</h1></center>
+  Disclaimer:
+  I am in no way assocciated with Kahoot!
+  I just wanted to have a go at creating it in python and then making a website for it, for fun.
   <script src="script.js"></script>
 </body>
 
