--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+  <ul>
+    <li><a href="default.asp">Home</a></li>
+    <li><a href="about.asp">About</a></li>
+    <li><a href="contact.asp">Contact</a></li>
+  </ul>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Kohoot</title>
